--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
             <ul class="anchornav">
                 <li><a href="#intro">Intro <span>#1 What is going on?</span></a></li>
                 <li><a href="#about">About <span>#2 Who is this girl?</span></a></li>
-                <li><a href="#clients">Work <span>#3 Who did she work for?</span></a></li>
+                <li><a href="#clients">Work <span>#3 What is her work experience?</span></a></li>
                 <li><a href="#portfolio">Study <span>#4 What did she study?</span></a></li>
                 <li><a href="#contact">Contact <span>#5 Please, hired me</span></a></li>
             </ul>
