--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
                 <li><a href="#about">About <span>#2 Who is this girl?</span></a></li>
                 <li><a href="#clients">Work <span>#3 What is her work experience?</span></a></li>
                 <li><a href="#portfolio">Study <span>#4 What did she study?</span></a></li>
-                <li><a href="#contact">Contact <span>#5 Please, hired me</span></a></li>
+                <li><a href="#contact">Contact <span>#5 Hired me!</span></a></li>
             </ul>
         </div>
     </div>
@@ -57,7 +57,7 @@
                 based in São Paulo,<br>
                 Brazil.</h1>
             <p class="lead">
-I am a woman of 25 years and changing career. Always dreaming to know new countries and cultures. Willing to learn and find out more about everything there is.
+I am a 25 years old woman looking to change careers. I'm always dreaming  abouy getting to know new countries and cultures. I love to learn and find out more about everything there is.
             </p>
         </div>
     </div>
@@ -71,9 +71,9 @@ I am a woman of 25 years and changing career. Always dreaming to know new countr
     <div class="section__inner">
         <div class="block">
             <a class="pre" href="#about"><span>#2</span>About me</a>
-            <h2>I wanna be an IT Girl </h2>
-            <p class="lead">I'm graduated in trilingual secretariat but I didn't like the job. During college I migrated to project management and business analysis.<br>
-            I took courses and improvements in my knowledge. In this way I realized that all big business depends on technology. Then I joined the graduation of Systems Analysis and Development. At this point I would like an opportunity in this area.
+            <h2>I want to be an IT Girl </h2>
+            <p class="lead">I am a college graduate in Office automation and Secretary skills that's worked as a trilingual secretary, but I didn't love the job. During college I migrated to project management and business analysis.<br>
+            I took courses to courses to improve my knowledge and realized that all big business depends on technology. This made me decide to join the Systems Analysis and Development department, and at this point I am looking for an opportunity in this field.
             </p>
         </div>
     </div>
@@ -123,7 +123,7 @@ See a full resume on <a href="ttps://www.linkedin.com/in/beagomesp/">Linkedin</a
 <p class="lead">"Man is nothing but what education makes of him." Kant
     <br>
     <br>
-  <b>OFFICE AUTOMATION ND SECRETARIAT</b><br>
+  <b>OFFICE AUTOMATION AND SECRETARY SKILLS</b><br>
  FATEC - GRADUATION  |  2015-2018 <br><br>
  <ul class="circle">
 	<li>Disciplines focused on meeting the requirements of a secretary/manager/executive assistant;</li>
