--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
                 <li><a href="#about">About <span>#2 Who is this girl?</span></a></li>
                 <li><a href="#clients">Work <span>#3 What is her work experience?</span></a></li>
                 <li><a href="#portfolio">Study <span>#4 What did she study?</span></a></li>
-                <li><a href="#contact">Contact <span>#5 Hired me!</span></a></li>
+                <li><a href="#contact">Contact <span>#5 Hire me!</span></a></li>
             </ul>
         </div>
     </div>
