--- a/index.html
+++ b/index.html
@@ -57,7 +57,7 @@
                 based in São Paulo,<br>
                 Brazil.</h1>
             <p class="lead">
-I am a 25 years old woman looking to change careers. I'm always dreaming  abouy getting to know new countries and cultures. I love to learn and find out more about everything there is.
+I am a 25 year old woman looking to change careers. I'm always dreaming about getting to know new countries and cultures. I love to learn and find out more about everything there is.
             </p>
         </div>
     </div>
@@ -72,7 +72,7 @@ I am a 25 years old woman looking to change careers. I'm always dreaming  abouy 
         <div class="block">
             <a class="pre" href="#about"><span>#2</span>About me</a>
             <h2>I want to be an IT Girl </h2>
-            <p class="lead">I am a college graduate in Office automation and Secretary skills that's worked as a trilingual secretary, but I didn't love the job. During college I migrated to project management and business analysis.<br>
+            <p class="lead">I am a college graduate in Office automation and Secretary skills that's worked as a trilingual secretary, but I didn't love the job. During college I moved into project management and business analysis.<br>
             I took courses to courses to improve my knowledge and realized that all big business depends on technology. This made me decide to join the Systems Analysis and Development department, and at this point I am looking for an opportunity in this field.
             </p>
         </div>
