--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="pt-br">
 <head>
-<link rel="stylesheet" type="text/css" href="style.css"/>
+<link rel="stylesheet" type="text/css" href="style.css" media="screen" />
 <meta charset="utf-8">
 <script src="https://use.typekit.net/ehh4lya.js"></script>
 <script>try{Typekit.load({ async: true });}catch(e){}</script>
@@ -34,6 +34,8 @@
     <div class="section__inner">
         <div class="block">
             <h2>Hello</h2>
+		
+		
  </head>
  <body>
             <ul class="anchornav">
@@ -51,7 +53,6 @@
     <div class="section__inner">
         <div class="block">
             <a class="pre" href="#intro"><span>#1</span>Intro</a>
-                                <img src="https://i.postimg.cc/w7YJdNFq/ftotopo.png" alt="" class="ftotopo">
             <h1>I am a student<br>
                 and a hard worker<br>
                 based in São Paulo,<br>
