--- a/index.html
+++ b/index.html
@@ -104,11 +104,11 @@
 VoIPConsult |  jan 2016 - mar 2018<br><br>
         <b>FINANCIAL ASSISTANT</b><br>
 Hospital Saint Peter | mai 2014 - jan 2016<br><br>
-            </p>  
+   </p>  
    <p class="lead">
             <a href="https://drive.google.com/file/d/1UC3_2iWoJ2paJ524nKf0Rt-n9MYHDCHn/view?usp=sharing">CV here.</a><br>
 See a full resume on <a href="https://www.linkedin.com/in/beagomesp/">Linkedin</a>.
-		</p>
+	</p>
         </div>
     </div>
 
@@ -128,21 +128,21 @@ See a full resume on <a href="https://www.linkedin.com/in/beagomesp/">Linkedin</
   <b>OFFICE AUTOMATION AND SECRETARY SKILLS</b><br>
  FATEC - GRADUATION  |  2015-2018 <br><br>
  <ul class="circle">
-	<li>Disciplines focused on meeting the requirements of a secretary/manager/executive assistant;</li>
-	<li>Foreign language classes;</li>
-    <li>Accounting, administration, and related techniques.</li>
+	<p><li>Disciplines focused on meeting the requirements of a secretary/manager/executive assistant;</li>
+	<p><li>Foreign language classes;</li>
+	<p><li>Accounting, administration, and related techniques.</li>
                         </ul>
 <br>
 <br>
     <b>ANALYSIS AND SYSTEMS DEVELOPMENT</b><br>
     FATEC - GRADUATION  |  2019-2022<br><br>
-   <ul class="circle">
-	<li>Disciplines aimed at designing, developing, deploying and maintaining Information Systems;</li>
-	<li>Manage systems development teams;</li>
-	<li>Diagnose problems and propose improvements based on computer systems;</li>
-	<li>Properly apply computational resources (hardware and software);</li>
-	<li>Design and implement Information Systems adhering to the strategic objectives of organizations;</li>            
-	<li>Produce software using appropriate methods and techniques and aiming to achieve essential software attributes.</li>                        </ul>
+  <p> <ul class="circle">
+	<p><li>Disciplines aimed at designing, developing, deploying and maintaining Information Systems;</li>
+	<p><li>Manage systems development teams;</li>
+	<p><li>Diagnose problems and propose improvements based on computer systems;</li>
+	<p><li>Properly apply computational resources (hardware and software);</li>
+	<p><li>Design and implement Information Systems adhering to the strategic objectives of organizations;</li>            
+	<p><li>Produce software using appropriate methods and techniques and aiming to achieve essential software attributes.</li>                        </ul>
             </p>        
         </div>
     </div>
@@ -153,39 +153,13 @@ See a full resume on <a href="https://www.linkedin.com/in/beagomesp/">Linkedin</
     <div class="section__inner">
         <div class="block">
          <h2>Courses</h2>
-<section id="listcourse">
-    <div class="float_center">
-        <ul class="child">
-          <li><a href="#">SALESFORCE</a></li>
-          <li><a href="#">BUSINESS</a></li>
-          <li><a href="#">ENGLISH</a></li>
-	  <li><a href="#">WEBDESIGN</a></li>
-	  <li><a href="#">PMO</a></li>
-          <li><a href="#">PMI</a></li>
-          <li><a href="#">6 SIGMA</a></li>
-          <li><a href="#">SCRUM</a></li>
-	  <li><a href="#">DATA SCIENCE</a></li>
-	  <li><a href="#">ARTIFICIAL INTELLIGENCE</a></li>
-	  <li><a href="#">EXCEL VBA</a></li>
-	  <li><a href="#">PYTHON</a></li>
-	  <li><a href="#">GERMAN</a></li>
-	  <li><a href="#">MACHINE LEARNING</a></li>
-	  <li><a href="#">ANALYTICS</a></li>
-	  <li><a href="#">SQL</a></li>
-	  <li><a href="#">DATABASE</a></li>
-	  <li><a href="#">SPANISH</a></li>
-	  <li><a href="#">SELF-IMPROVEMENT</a></li>
-	  <li><a href="#">C</a></li>
-	  <li><a href="#">ANDROID</a></li>
-	  <li><a href="#">BIGDATA</a></li>
-	  <li><a href="#">FRENCH</a></li>
-	  <li><a href="#">FINANCES</a></li>
-	  <li><a href="#">LINUX</a></li>
-        </ul>
-        <div class="clear"></div>
-    </div>
-    <div class="clear"></div>
-</section>
+<p class="lead">
+<br> SALESFORCE  BUSINESS   ENGLISH   WEBDESIGN   PMO   PMI
+<br> 6 SIGMA   SCRUM   DATA SCIENCE   ARTIFICIAL INTELLIGENCE
+<br> EXCEL VBA   PYTHON   GERMAN   MACHINE LEARNING   ANALYTICS
+<br> SQL   DATABASE   SPANISH   SELF-IMPROVEMENT   C   ANDROID
+<br> BIGDATA   FRENCH   FINANCES  LINUX
+	</p>
 	    
 See more information in <a href="https://docs.google.com/spreadsheets/d/1XQDkSwjn7fsB3t-rhbi9-f2gPAhwTOrBbpdSr-3vvNU/edit?usp=sharing">here</a>
         </div>
