--- a/index.html
+++ b/index.html
@@ -20,8 +20,6 @@
 <br> 
 <a href="https://www.instagram.com/beagomesp" target="_blank"><img src="https://i.postimg.cc/JG3X7hdb/instagram.png" alt="" width="30" height="30"></a>
         <br>
-<a href="https://api.whatsapp.com/send?phone=5511982634021&text=Ol%C3%A1!" target="_blank"><img src="https://i.postimg.cc/bZztZjK4/whatsapp.png" alt="" width="30" height="30"></a>
-        <br>
 <a href="https://trailhead.salesforce.com/pt-BR/me/beagomesp" target="_blank"><img src="https://i.postimg.cc/PpLZdzBx/salesforce.png" alt="" width="30" height="30"></a> 
 	<br>
 <a href="https://www.hackerrank.com/beagomesp?hr_r=1" target="_blank"><img src="https://i.postimg.cc/XY7qwKXV/hr.png" alt="" width="30" height="30"></a> 
@@ -96,13 +94,13 @@
             <a class="pre" href="#clients"><span>#3</span>Work</a>
             <h2>Professional Experience</h2>
             <p class="lead">
-        <b>ASSISTANT GENERAL MANAGER</b><br>
+        <b>Assistante genereal manager</b><br>
  Congregação Israelita Paulista |  apr 2018 - current<br><br>
-        <b>GERMAN TEACHING ASSISTANT</b><br>
+        <b>German teaching assistant</b><br>
  FATEC |  apr 2018 - dec 2018<br><br>
-       <b>ADMINISTRATIVE  ASSISTANT</b><br>
+       <b>Administrative assistant</b><br>
 VoIPConsult |  jan 2016 - mar 2018<br><br>
-        <b>FINANCIAL ASSISTANT</b><br>
+        <b>Financial assistant</b><br>
 Hospital Saint Peter | mai 2014 - jan 2016<br><br>
    </p>  
    <p class="lead">
@@ -125,7 +123,7 @@ See a full resume on <a href="https://www.linkedin.com/in/beagomesp/">Linkedin</
     <h2>Education</h2>
 <p class="lead">
     <br>
-  <b>OFFICE AUTOMATION AND SECRETARY SKILLS</b><br>
+  <b>Office automation and secretary skills</b><br>
  FATEC - GRADUATION  |  2015-2018 <br><br>
  <ul class="circle">
 	<p><li>Disciplines focused on meeting the requirements of a secretary/manager/executive assistant;</li>
@@ -133,8 +131,7 @@ See a full resume on <a href="https://www.linkedin.com/in/beagomesp/">Linkedin</
 	<p><li>Accounting, administration, and related techniques.</li>
                         </ul>
 <br>
-<br>
-    <b>ANALYSIS AND SYSTEMS DEVELOPMENT</b><br>
+    <b>Analysis and sytems development</b><br>
     FATEC - GRADUATION  |  2019-2022<br><br>
   <p> <ul class="circle">
 	<p><li>Disciplines aimed at designing, developing, deploying and maintaining Information Systems;</li>
@@ -154,11 +151,11 @@ See a full resume on <a href="https://www.linkedin.com/in/beagomesp/">Linkedin</
         <div class="block">
          <h2>Courses</h2>
 <p class="lead">
-<br> SALESFORCE  BUSINESS   ENGLISH   WEBDESIGN   PMO   PMI
-<br> 6 SIGMA   SCRUM   DATA SCIENCE   ARTIFICIAL INTELLIGENCE
-<br> EXCEL VBA   PYTHON   GERMAN   MACHINE LEARNING   ANALYTICS
-<br> SQL   DATABASE   SPANISH   SELF-IMPROVEMENT   C   ANDROID
-<br> BIGDATA   FRENCH   FINANCES  LINUX
+<br> Salesforce&nbsp;&nbsp;Business&nbsp;&nbsp;English&nbsp;&nbsp;Webdesign&nbsp;&nbsp;PMO&nbsp;&nbsp;PMI
+<br> 6 Sigma&nbsp;&nbsp;Scrum&nbsp;&nbsp;Data science&nbsp;&nbsp;Artificial intelligence
+<br> Excel VBA&nbsp;&nbsp;Python&nbsp;&nbsp;German&nbsp;&nbsp;Machine learning&nbsp;&nbsp;Analytics
+<br> SQL&nbsp;&nbsp;Database&nbsp;&nbsp;Spanish&nbsp;&nbsp;Self-improvement&nbsp;&nbsp;C&nbsp;&nbsp;Android
+<br> Bigdata&nbsp;&nbsp;French&nbsp;&nbsp;Finances&nbsp;&nbsp;Linux
 	</p>
 	    
 See more information in <a href="https://docs.google.com/spreadsheets/d/1XQDkSwjn7fsB3t-rhbi9-f2gPAhwTOrBbpdSr-3vvNU/edit?usp=sharing">here</a>
