--- a/index.html
+++ b/index.html
@@ -94,7 +94,7 @@
             <a class="pre" href="#clients"><span>#3</span>Work</a>
             <h2>Professional Experience</h2>
             <p class="lead">
-        <b>Assistante genereal manager</b><br>
+        <b>Assistante general manager</b><br>
  Congregação Israelita Paulista |  apr 2018 - current<br><br>
         <b>German teaching assistant</b><br>
  FATEC |  apr 2018 - dec 2018<br><br>
@@ -150,13 +150,13 @@ See a full resume on <a href="https://www.linkedin.com/in/beagomesp/">Linkedin</
     <div class="section__inner">
         <div class="block">
          <h2>Courses</h2>
-<p class="lead">
-<br> Salesforce&nbsp;&nbsp;Business&nbsp;&nbsp;English&nbsp;&nbsp;Webdesign&nbsp;&nbsp;PMO&nbsp;&nbsp;PMI
-<br> 6 Sigma&nbsp;&nbsp;Scrum&nbsp;&nbsp;Data science&nbsp;&nbsp;Artificial intelligence
-<br> Excel VBA&nbsp;&nbsp;Python&nbsp;&nbsp;German&nbsp;&nbsp;Machine learning&nbsp;&nbsp;Analytics
-<br> SQL&nbsp;&nbsp;Database&nbsp;&nbsp;Spanish&nbsp;&nbsp;Self-improvement&nbsp;&nbsp;C&nbsp;&nbsp;Android
-<br> Bigdata&nbsp;&nbsp;French&nbsp;&nbsp;Finances&nbsp;&nbsp;Linux
-	</p>
+<p class="lead"><b>
+<br> Salesforce&nbsp;&nbsp;&nbsp;Business&nbsp;&nbsp;&nbsp;English&nbsp;&nbsp;&nbsp;Webdesign&nbsp;&nbsp;&nbsp;PMO&nbsp;&nbsp;&nbsp;PMI
+<br> 6 Sigma&nbsp;&nbsp;&nbsp;Scrum&nbsp;&nbsp;&nbsp;Data science&nbsp;&nbsp;&nbsp;Artificial intelligence
+<br> Excel VBA&nbsp;&nbsp;&nbsp;Python&nbsp;&nbsp;&nbsp;German&nbsp;&nbsp;&nbsp;Machine learning&nbsp;&nbsp;&nbsp;Analytics
+<br> SQL&nbsp;&nbsp;&nbsp;Database&nbsp;&nbsp;&nbsp;Spanish&nbsp;&nbsp;&nbsp;Self-improvement&nbsp;&nbsp;&nbsp;C&nbsp;&nbsp;&nbsp;Android
+<br> Bigdata&nbsp;&nbsp;&nbsp;French&nbsp;&nbsp;&nbsp;Finances&nbsp;&nbsp;&nbsp;Linux
+	</b>	</p>
 	    
 See more information in <a href="https://docs.google.com/spreadsheets/d/1XQDkSwjn7fsB3t-rhbi9-f2gPAhwTOrBbpdSr-3vvNU/edit?usp=sharing">here</a>
         </div>
