--- a/index.html
+++ b/index.html
@@ -150,6 +150,8 @@ See a full resume on <a href="https://www.linkedin.com/in/beagomesp/">Linkedin</
     <div class="section__inner">
         <div class="block">
          <h2>Courses</h2>
+		<p class="lead"> I am interested in the following topics. For that reason I took courses and attended lectures.
+		</p>
 <p class="lead"><b>
 <br> Salesforce&nbsp;&nbsp;&nbsp;Business&nbsp;&nbsp;&nbsp;English&nbsp;&nbsp;&nbsp;Webdesign&nbsp;&nbsp;&nbsp;PMO&nbsp;&nbsp;&nbsp;PMI
 <br> 6 Sigma&nbsp;&nbsp;&nbsp;Scrum&nbsp;&nbsp;&nbsp;Data science&nbsp;&nbsp;&nbsp;Artificial intelligence
